--- a/my-first-website/style.css
+++ b/my-first-website/style.css
@@ -2,8 +2,31 @@ html,
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: black;
+    font-weight: 900px;
 }
 
 canvas {
     display: block;
+}
+
+#p5-canvas {
+    position: absolute;
+    top: calc(50% - 300px);
+    left: calc(50% - 300px);
+}
+
+a {
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+a:hover {
+    color: lightyellow;
+    text-decoration: underline;
+}
+
+h1 {
+    color: cornsilk;
 }
